Input/grammar.txt
Expr => OExpr → Expr | OExpr

OExpr => OExpr or AExpr | AExpr

AExpr => AExpr and QExpr | QExpr

QExpr => ∀ Var QExpr | ∃ Var QExpr | ( ∀ Var ) QExpr | ( ∃ Var ) QExpr | not QExpr | ( Expr ) | Term

Term => PVar | PVar ( ) | PVar ( Args ) | ⊤ | ⊥

Args => Arg , Args | Arg

Arg => Var | Const
